# fractalsearch

./: .gitignore  AGENT.md  README.md  pyproject.toml  runs.jsonl
dashboard/: app.py  make_groundtruth.py
dashboard/static/: index.html  mandelbrot_lab.html
harness/: colormap.py  evaluate.py  groundtruth.py  interface.py
runs/20260603-102358/: baseline_mlp.py  result.json
runs/20260603-102916/: result.json
runs/20260603-103522/: hashgrid.py  result.json
runs/20260603-104114/: hashgrid_v2.py  result.json
runs/20260603-104706/: hashgrid_adaptive.py  result.json
runs/20260603-105309/: hashgrid_bank.py  result.json
runs/20260603-105912/: hashgrid_bigT.py  result.json
runs/20260603-110517/: result.json
runs/20260603-111141/: result.json
runs/20260603-111820/: hashgrid_replay.py  result.json
solutions/: champion.py  cheat_groundtruth.py  fourier.py  fourier_mlp.py  hashgrid_2phase.py  hashgrid_2stage.py  hashgrid_F4.py  hashgrid_T24.py  hashgrid_amp.py  hashgrid_bag.py  hashgrid_bb.py  hashgrid_bb_lr2.py  hashgrid_best.py  hashgrid_bigT2.py  hashgrid_dec.py  hashgrid_densify.py  hashgrid_dualhash.py  hashgrid_ema.py  hashgrid_ens.py  hashgrid_errfield.py  hashgrid_fast.py  hashgrid_gtfree.py  hashgrid_h128_hard95.py  hashgrid_hard90.py  hashgrid_l12.py  hashgrid_l12p2.py  hashgrid_l16.py  hashgrid_l16F4.py  hashgrid_megabank.py  hashgrid_mine50.py  hashgrid_n32F4.py  hashgrid_n32b768.py  hashgrid_n32b768lr8.py  hashgrid_n32p2.py  hashgrid_nmax16k.py  hashgrid_nmax32k.py  hashgrid_nmax64k.py  hashgrid_nmin64.py  hashgrid_packed.py  hashgrid_pool4.py  (+9 more)
(+144 files in other folders)
