[project]
name = "fractalsearch"
version = "0.1.0"
description = "Autonomous research into the best algorithm to fit the Mandelbrot set"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "torch==2.9.1",
    "numpy>=2.2.6",
    "pillow>=11.0.0",
    "fastapi>=0.115.0",
    "uvicorn>=0.32.0",
]

[tool.uv.sources]
torch = [
    { index = "pytorch-cu128" },
]

[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true
